--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <title>Galaxy Astrals - Home</title>
     <link rel="icon" type="image/png" href="RES/Icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/navbar.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/scrollbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
     html,body {
         margin: 0;
+        background-color: #262626;
+        text-align: center;
     }
     body {
-        background-color: #262626;
+        margin-top: 49px;
     }
 </style>
 <body>
@@ -18,8 +24,25 @@
 <!---Navbar--->
     <div class="navbar">
         <img src="RES/Icon.png">
-        <a href="">Home</a>
+        <a href=""><i class="fa fa-home"></i> Home</a>
+        <a href="" style="float: right;"><i class="fa fa-copyright"></i> Galaxy Astrals</a>
     </div>
 <!---End Navbar--->
+
+<!---Main Content--->
+    <br>
+    <br>
+    <div class="main">
+        <div class="leader">
+            <h3>Leaderboard</h3>
+            <br>
+            <br>
+            <p>Server Level<br><br>ZeldaSorceress(10)<br>GrumpyJelly(5)<br>Gavan(0)</p>
+            <p>Bounties<br><br>ZeldaSorceress(445)<br>GrumpyJelly(387)<br>Gavan(123)<br>ShinoShino(96)</p>
+            <p>Net Worth<br><br>GrumpyJelly<br>ShinoShino<br>ZeldaSorceress<br>Gavan</p>
+            <p>Investments<br><br>GrumpyJelly<br>ShinoShino<br>ZeldaSorceress<br>Gavan</p>
+        </div>
+    </div>
+<!---End Main Content--->
 </body>
 </html>
