--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         text-align: center;
     }
     body {
-        margin-top: 49px;
+        margin-top: 19px;
     }
 </style>
 <body>
@@ -36,11 +36,22 @@
         <div class="leader">
             <h3>Leaderboard</h3>
             <br>
+            <button>Server Level<br>ZeldaSorceress(10)</button>
             <br>
-            <p>Server Level<br><br>ZeldaSorceress(10)<br>GrumpyJelly(5)<br>Gavan(0)</p>
-            <p>Bounties<br><br>ZeldaSorceress(445)<br>GrumpyJelly(387)<br>Gavan(123)<br>ShinoShino(96)</p>
-            <p>Net Worth<br><br>GrumpyJelly<br>ShinoShino<br>ZeldaSorceress<br>Gavan</p>
-            <p>Investments<br><br>GrumpyJelly<br>ShinoShino<br>ZeldaSorceress<br>Gavan</p>
+            <br>
+            <br>
+            <br>
+            <button>Bounties<br>ZeldaSorceress(445)</button>
+            <br>
+            <br>
+            <br>
+            <br>
+            <button>Net Worth<br>GrumpyJelly</button>
+            <br>
+            <br>
+            <br>
+            <br>
+            <button>Investments<br>GrumpyJelly</button>
         </div>
     </div>
 <!---End Main Content--->
